# QtPictureAnalyze

./: CMakeLists.txt  brightnessbar.cpp  brightnessbar.h  brightnessbar.ui  custom_view.cpp  custom_view.h  icons.qrc  itemStruct.h  itemsizewidget.cpp  itemsizewidget.h  itemsizewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui.autosave  objects.cpp  objects.h  objects.ui  objectstoolbar.cpp  objectstoolbar.h  objectstoolbar.ui  rl4_headers.h  rl4_reader.cpp  rl4reader.cpp  rl4reader.h  toolswindow.ui
